--- a/focus.html
+++ b/focus.html
@@ -31,6 +31,69 @@
     <div class="articles-container">
       <h2 class="title-underline3" >RETROUVEZ TOUS LES FOCUS</h2>
       <div class="article">
+        <img src="./img/Focus/Gucci/logo-Gucci.jpg" alt="gucci">
+        <h2>GUCCI x ONE PIECE</h2>
+        <div class="article-author">
+          <p>M. Lemercier</p>
+        </div>
+        <div class="article-content">
+          <p>Je promeus ce mois-ci non pas un artiste, mais une collection.
+            Ce mois-ci est sortie la nouvelle collection Fake/Not de la maison italienne GUCCI.  
+            Vous vous demanderez, quel est le lien entre le monde du manga et une marque de luxe? 
+            Et bien Gucci a eu la bonne idée de collaborer avec Eiichiro Oda, le mangaka de One Piece pour présenter sa nouvelle collection. L'initiative est assez rare et plutôt réussie pour être soulignée. 
+            Oda a donc dessiné Zoro & Luffy habillés de la nouvelle collection Fake/Not. Voir ces personnages habillés à la mode est amusant, Zoro en manteau long, Luffy en jean etc.
+            L'idée est très bonne, originale, elle permet au manga One Piece d'attirer un nouveau type de client, d'interpeller les gens qui aiment la mode.
+            Maintenant, à suivre si la collaboration est une réussite sur la collection gucci. 
+            Je vous laisse ci-dessous 4 illustrations d'Eiichiro Oda sur la nouvelle collection italienne.
+            Au plaisir pour un nouveau focus :)</p>
+        </div>
+        <div class="article-date">
+          <p>Octobre 2020</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img src="./img/Focus/Gucci/Luffy.jpeg" alt="Luffy" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Monkey D. Luffy</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Eiichiro Oda</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/Gucci/LuffyRed.jpeg" alt="Luffy" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Monkey D. Luffy</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Eiichiro Oda</p>
+            </div>
+        </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/Gucci/ZoroGreen.jpeg" alt="Zoro" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Roronoa Zoro</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Eiichiro Oda</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img src="./img/Focus/Gucci/Zoro.jpeg" alt="Zoro" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Roronoa Zoro</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: Eiichiro Oda</p>
+          </div>
+      </li>
+        </ul>
+    </div>
+  </section>
+  <div class="content">
+    <div class="articles-container">
+      <div class="article">
         <img src="./img/Focus/VanGoathe/Shoto.jpg" alt="VanGoathe">
         <h2>GOATHE©</h2>
         <div class="article-author">
