--- a/index.html
+++ b/index.html
@@ -114,23 +114,24 @@
       <div class="articles-container">
         <h2 class="title-underline2" >LE FOCUS</h2>
         <div class="article">
-          <img src="./img/Focus/VanGoathe/Shoto.jpg" alt="VanGoathe">
-          <h2>GOATHE©</h2>
+          <img src="./img/Focus/Gucci/logo-Gucci.jpg" alt="gucci">
+          <h2>GUCCI x ONE PIECE</h2>
           <div class="article-author">
             <p>M. Lemercier</p>
           </div>
           <div class="article-content">
-            <p>Je promeus ce mois-ci <span class="gras">@vangoathe</span>.
-              Ce mois-ci, c'est un artiste de plus grand envergure que je vais présenter. En effet, il a déjà acquis une solide "fanbase" (+166000 abonnés instagram!).
-              Au commencement, goathe ne dessinait que des personnalités avec un streetstyle qui change de leur style habituel.
-              Les personnages sont redessinés, et le style de ces derniers rend un visuel atypique et plaisant. J'en fais la promotion car il dessine actuellement presque uniquement des personnages de manga en streetstyle. Mais les personnalités qu'il dessine sont également très bien réalisées, je vous conseille d'y jeter un oeil!
-              Les dessins sont extrêmement complexe avec beaucoup de détails. On ressent l'intêret pour la mode et le streetstyle dans ses dessins. C'est très fort!
-              Sa popularité lui a permis d'ouvrir un e-shop dans lequel on peut acheter ses oeuvres.
-              Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & un lien vers son shop. 
+            <p>Je promeus ce mois-ci non pas un artiste, mais une collection.
+              Ce mois-ci est sortie la nouvelle collection Fake/Not de la maison italienne GUCCI.  
+              Vous vous demanderez, quel est le lien entre le monde du manga et une marque de luxe? 
+              Et bien Gucci a eu la bonne idée de collaborer avec Eiichiro Oda, le mangaka de One Piece pour présenter sa nouvelle collection. L'initiative est assez rare et plutôt réussie pour être soulignée. 
+              Oda a donc dessiné Zoro & Luffy habillés de la nouvelle collection Fake/Not. Voir ces personnages habillés à la mode est amusant, Zoro en manteau long, Luffy en jean etc.
+              L'idée est très bonne, originale, elle permet au manga One Piece d'attirer un nouveau type de client, d'interpeller les gens qui aiment la mode.
+              Maintenant, à suivre si la collaboration est une réussite sur la collection gucci. 
+              Je vous laisse ci-dessous 4 illustrations d'Eiichiro Oda sur la nouvelle collection italienne.
               Au plaisir pour un nouveau focus :)</p>
           </div>
           <div class="article-date">
-            <p>Septembre 2020</p>
+            <p>Octobre 2020</p>
           </div>
         </div>
       </div>
@@ -139,48 +140,40 @@
       <div class="container">
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                <img src="./img/Focus/VanGoathe/GTO.jpg" alt="GTO" class="appreciate-elem-img">
+                <img src="./img/Focus/Gucci/Luffy.jpeg" alt="Luffy" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Onizuka</p>
+                    <p>Monkey D. Luffy</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: @Vangoathe</p>
+                    <p>Auteur: Eiichiro Oda</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/VanGoathe/Robin.jpg" alt="Robin" class="appreciate-elem-img">
+              <img src="./img/Focus/Gucci/LuffyRed.jpeg" alt="Luffy" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Nico Robin</p>
+                  <p>Monkey D. Luffy</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @Vangoathe</p>
+                  <p>Auteur: Eiichiro Oda</p>
               </div>
           </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/VanGoathe/Nezuko.jpg" alt="Nezuko" class="appreciate-elem-img">
+              <img src="./img/Focus/Gucci/ZoroGreen.jpeg" alt="Zoro" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Nezuko Kamado</p>
+                  <p>Roronoa Zoro</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @Vangoathe</p>
+                  <p>Auteur: Eiichiro Oda</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/Focus/VanGoathe/Kirua.jpg" alt="Kirua" class="appreciate-elem-img">
+            <img src="./img/Focus/Gucci/Zoro.jpeg" alt="Zoro" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Kirua Zoldyck</p>
+                <p>Roronoa Zoro</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: @Vangoathe</p>
+                <p>Auteur: Eiichiro Oda</p>
             </div>
         </li>
           </ul>
       </div>
     </section>
-    <div class="cover">
-      <a class="espacedroite" href="https://www.inprnt.com/gallery/vangoathe/">
-        <i class="fas fa-shopping-cart"></i>SHOP
-      </a>
-      <a class="espacegauche" href="https://www.instagram.com/vangoathe/">
-        <i class="fab fa-instagram"></i>GOATHE©
-      </a>
-    </div>
     <footer>
         <div class="block">
             <h2>SOCIAL</h2>
