--- a/POther.html
+++ b/POther.html
@@ -250,6 +250,49 @@
         </ul>
     </div>
   </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+      <h2 class="title-underline" >JUJUTSU KAIZEN</h2>
+        <ul class="appreciate-list">
+          <li class="appreciate-elem">
+            <img src="./img/JujutsuKaizen/Gojo1.JPG" alt="Gojo" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Satoru Gojo</p>
+                <p>Rire</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Bulehya</p>
+            </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/JujutsuKaizen/GojoVsSukuna.JPG" alt="Gojo" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Satoru Gojo</p>
+                <p>Vs Sukuna</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Bulehya</p>
+            </div>
+        </li>
+          <li class="appreciate-elem">
+            <img src="./img/JujutsuKaizen/Gojo3.jpeg" alt="Gojo" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Satoru Gojo</p>
+                <p>Infini</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Bulehya</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img src="./img/JujutsuKaizen/Gojo2.JPG" alt="Gojo" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Satoru Gojo</p>
+                <p>Street vibes</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Bulehya</p>
+            </div>
+      </li>
+        </ul>
+    </div>
+  </section>
   <footer>
     <div class="block">
         <h2>SOCIAL</h2>
