--- a/focus.html
+++ b/focus.html
@@ -31,6 +31,75 @@
     <div class="articles-container">
       <h2 class="title-underline3" >RETROUVEZ TOUS LES FOCUS</h2>
       <div class="article">
+        <img src="./img/Focus/ArisRoth/LivaiPP2ArisRoth.jpg" alt="Livai">
+        <h2>Aris Roth</h2>
+        <div class="article-author">
+          <p>M. Lemercier</p>
+        </div>
+        <div class="article-content">
+          <p>Je promeus ce mois-ci <span class="gras">@ArisRoth</span>.
+            Ce mois-ci, c'est un artiste assez original que je vais vous présenter. 
+            Arisroth ne dessine qu'avec deux couleurs, le rose & le bleu et c'est ce qui fait toute son originalité.
+            Les personnages sont dessinés dans un autre style dans des couleurs différentes ce qui dénature beaucoup les personnages. Tout cela est très beau et intéressant.
+            Les deux uniques couleurs dégagent une atmosphère qui s'ajoute à son propre style, sa propre patte de dessinateur. Le résultat est soigné, c'est propre !!
+            Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & son twitter.
+            Au plaisir pour un nouveau focus :)</p>
+        </div>
+        <div class="article-date">
+          <p>Novembre 2020</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img src="./img/Focus/ArisRoth/KakashiArisRoth.jpg" alt="Kakashi" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Kakashi Hatake</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Arisroth</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/ArisRoth/LuffyArisRoth.jpg" alt="Luffy" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Monkey D. Luffy</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Arisroth</p>
+            </div>
+        </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/ArisRoth/ZoroSanjiArisRoth.jpg" alt="Zoro&SAnji" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Zoro & Sanji</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Arisroth</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img src="./img/Focus/ArisRoth/GokuArisRoth.jpg" alt="Goku" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Son Goku</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: Arisroth</p>
+          </div>
+      </li>
+        </ul>
+    </div>
+  </section>
+  <div class="cover">
+    <a class="espacedroite" href="https://twitter.com/arisroth">
+      <i class="fab fa-twitter"></i>arisroth
+    </a>
+    <a class="espacegauche" href="https://www.instagram.com/arisroth/">
+      <i class="fab fa-instagram"></i>arisroth
+    </a>
+  </div>
+  <div class="content">
+    <div class="articles-container">
+      <div class="article">
         <img src="./img/Focus/Gucci/logo-Gucci.jpg" alt="gucci">
         <h2>GUCCI x ONE PIECE</h2>
         <div class="article-author">
