--- a/index.html
+++ b/index.html
@@ -45,43 +45,43 @@
     </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >HUNTERXHUNTER EST SUR WALL. !</h2>
+          <h2 class="title-underline" >Jujutsu Kaizen & Satoru Gojo sont sur WALL. - par Bulehya</h2>
           <ul class="appreciate-list">
             <li class="appreciate-elem">
-              <img src="./img/HxH/Gonpeche.JPG" alt="GON" class="appreciate-elem-img">
+              <img src="./img/JujutsuKaizen/Gojo1.JPG" alt="Gojo" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Gon Freeccs</p>
-                  <p>Pêche</p>
+                  <p>Satoru Gojo</p>
+                  <p>Rire</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Heaten</p>
+                  <p>Auteur: Bulehya</p>
               </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/HxH/hisoka4.jpeg" alt="Hisoka" class="appreciate-elem-img">
+              <img src="./img/JujutsuKaizen/GojoVsSukuna.JPG" alt="Gojo" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Hisoka Morow</p>
-                  <p>Coquelicots</p>
+                  <p>Satoru Gojo</p>
+                  <p>Vs Sukuna</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: D.Lelie</p>
+                  <p>Auteur: Bulehya</p>
               </div>
           </li>
             <li class="appreciate-elem">
-              <img src="./img/HxH/irumi.jpeg" alt="Irumi" class="appreciate-elem-img">
+              <img src="./img/JujutsuKaizen/Gojo3.jpeg" alt="Gojo" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Irumi Zoldyck</p>
-                  <p>Moonlight</p>
+                  <p>Satoru Gojo</p>
+                  <p>Infini</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Bioravuto</p>
+                  <p>Auteur: Bulehya</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/HxH/KiruaMoon.JPG" alt="Kirua" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Kirua Zoldyck</p>
-                <p>Lightning</p>
-                <div class="appreciate-separator"></div>
-                <p>Auteur: BULEHYA</p>
-            </div>
+            <img src="./img/JujutsuKaizen/Gojo2.JPG" alt="Gojo" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Satoru Gojo</p>
+                  <p>Street vibes</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Bulehya</p>
+              </div>
         </li>
           </ul>
       </div>
@@ -89,22 +89,22 @@
     <div class="pack">
       <div class="pack-container">
         <h2 class="pack-title">STARTER PACK</h2>
-        <p class="pack-title">RORONOA ZORO</p>
+        <p class="pack-title">Shanks & Baggy</p>
           <div class="starter">
             <ul class="starter-list1">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/ZORO/Zoro1.jpeg" alt="ZORO">
+                <img class="borderpack" src="./img/affiche/Shanks&Baggy/SB1.jpeg" alt="ShanksBaggy">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/ZORO/Zoro2.jpeg" alt="ZORO">
+                <img class="borderpack" src="./img/affiche/Shanks&Baggy/SB2.jpeg" alt="ShanksBaggy">
               </li>
             </ul>
             <ul class="starter-list2">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/ZORO/Zoro3.jpeg" alt="ZORO">
+                <img class="borderpack" src="./img/affiche/Shanks&Baggy/SB3.jpeg" alt="ShanksBaggy">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/ZORO/Zoro4.jpeg" alt="ZORO">
+                <img class="borderpack" src="./img/affiche/Shanks&Baggy/SB4.jpeg" alt="ShanksBaggy">
               </li>
             </ul>
           </div>
@@ -114,24 +114,22 @@
       <div class="articles-container">
         <h2 class="title-underline2" >LE FOCUS</h2>
         <div class="article">
-          <img src="./img/Focus/Gucci/logo-Gucci.jpg" alt="gucci">
-          <h2>GUCCI x ONE PIECE</h2>
+          <img src="./img/Focus/ArisRoth/LivaiPP2ArisRoth.jpg" alt="Livai">
+          <h2>Aris Roth</h2>
           <div class="article-author">
             <p>M. Lemercier</p>
           </div>
           <div class="article-content">
-            <p>Je promeus ce mois-ci non pas un artiste, mais une collection.
-              Ce mois-ci est sortie la nouvelle collection Fake/Not de la maison italienne GUCCI.  
-              Vous vous demanderez, quel est le lien entre le monde du manga et une marque de luxe? 
-              Et bien Gucci a eu la bonne idée de collaborer avec Eiichiro Oda, le mangaka de One Piece pour présenter sa nouvelle collection. L'initiative est assez rare et plutôt réussie pour être soulignée. 
-              Oda a donc dessiné Zoro & Luffy habillés de la nouvelle collection Fake/Not. Voir ces personnages habillés à la mode est amusant, Zoro en manteau long, Luffy en jean etc.
-              L'idée est très bonne, originale, elle permet au manga One Piece d'attirer un nouveau type de client, d'interpeller les gens qui aiment la mode.
-              Maintenant, à suivre si la collaboration est une réussite sur la collection gucci. 
-              Je vous laisse ci-dessous 4 illustrations d'Eiichiro Oda sur la nouvelle collection italienne.
+            <p>Je promeus ce mois-ci <span class="gras">@ArisRoth</span>.
+              Ce mois-ci, c'est un artiste assez original que je vais vous présenter. 
+              Arisroth ne dessine qu'avec deux couleurs, le rose & le bleu et c'est ce qui fait toute son originalité.
+              Les personnages sont dessinés dans un autre style dans des couleurs différentes ce qui dénature beaucoup les personnages. Tout cela est très beau et intéressant.
+              Les deux uniques couleurs dégagent une atmosphère qui s'ajoute à son propre style, sa propre patte de dessinateur. Le résultat est soigné, c'est propre !!
+              Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & son twitter.
               Au plaisir pour un nouveau focus :)</p>
           </div>
           <div class="article-date">
-            <p>Octobre 2020</p>
+            <p>Novembre 2020</p>
           </div>
         </div>
       </div>
@@ -140,40 +138,48 @@
       <div class="container">
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                <img src="./img/Focus/Gucci/Luffy.jpeg" alt="Luffy" class="appreciate-elem-img">
+                <img src="./img/Focus/ArisRoth/KakashiArisRoth.jpg" alt="Kakashi" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Monkey D. Luffy</p>
+                    <p>Kakashi Hatake</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: Eiichiro Oda</p>
+                    <p>Auteur: Arisroth</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/Gucci/LuffyRed.jpeg" alt="Luffy" class="appreciate-elem-img">
+              <img src="./img/Focus/ArisRoth/LuffyArisRoth.jpg" alt="Luffy" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Monkey D. Luffy</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Eiichiro Oda</p>
+                  <p>Auteur: Arisroth</p>
               </div>
           </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/Gucci/ZoroGreen.jpeg" alt="Zoro" class="appreciate-elem-img">
+              <img src="./img/Focus/ArisRoth/ZoroSanjiArisRoth.jpg" alt="Zoro&SAnji" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Roronoa Zoro</p>
+                  <p>Zoro & Sanji</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Eiichiro Oda</p>
+                  <p>Auteur: Arisroth</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/Focus/Gucci/Zoro.jpeg" alt="Zoro" class="appreciate-elem-img">
+            <img src="./img/Focus/ArisRoth/GokuArisRoth.jpg" alt="Goku" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Roronoa Zoro</p>
+                <p>Son Goku</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: Eiichiro Oda</p>
+                <p>Auteur: Arisroth</p>
             </div>
         </li>
           </ul>
       </div>
     </section>
+    <div class="cover">
+      <a class="espacedroite" href="https://twitter.com/arisroth">
+        <i class="fab fa-twitter"></i>arisroth
+      </a>
+      <a class="espacegauche" href="https://www.instagram.com/arisroth/">
+        <i class="fab fa-instagram"></i>arisroth
+      </a>
+    </div>
     <footer>
         <div class="block">
             <h2>SOCIAL</h2>
