--- a/PMHA.html
+++ b/PMHA.html
@@ -340,7 +340,7 @@
         <div class="block-social">
           <div class="block-social-container">
             <i class="fab fa-twitter"></i>
-            <a href="https://twitter.com/vlemrc">@vlemrc</a>
+            <a href="https://twitter.com/vlemrc" target="_blank">@vlemrc</a>
           </div>
           <div class="block-social-container">
             <i class="fab fa-snapchat"></i>
@@ -348,7 +348,7 @@
           </div>
           <div class="block-social-container">
             <i class="fab fa-instagram"></i>
-            <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
+            <a href="https://www.instagram.com/vlemrc/" target="_blank">@vlemrc</a>
           </div>
         </div>
       <p>
