--- a/POther.html
+++ b/POther.html
@@ -252,7 +252,7 @@
   </section>
   <section id="Appreciate" class="appreciate">
     <div class="container">
-      <h2 class="title-underline" >JUJUTSU KAIZEN</h2>
+      <h2 class="title-underline" >JUJUTSU KAISEN</h2>
         <ul class="appreciate-list">
           <li class="appreciate-elem">
             <img src="./img/JujutsuKaizen/Gojo1.JPG" alt="Gojo" class="appreciate-elem-img">
@@ -299,7 +299,7 @@
         <div class="block-social">
           <div class="block-social-container">
             <i class="fab fa-twitter"></i>
-            <a href="https://twitter.com/vlemrc">@vlemrc</a>
+            <a href="https://twitter.com/vlemrc" target="_blank">@vlemrc</a>
           </div>
           <div class="block-social-container">
             <i class="fab fa-snapchat"></i>
@@ -307,7 +307,7 @@
           </div>
           <div class="block-social-container">
             <i class="fab fa-instagram"></i>
-            <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
+            <a href="https://www.instagram.com/vlemrc/" target="_blank">@vlemrc</a>
           </div>
         </div>
       <p>
