--- a/computer.html
+++ b/computer.html
@@ -175,9 +175,9 @@
       <div class="banner-container-link-social">
         <h2>SOCIAL</h2>
         <div class="social-container">
-            <a href="https://twitter.com/vlemrc"><i class="fab fa-twitter"></i> @vlemrc</a>
+            <a href="https://twitter.com/vlemrc" target="_blank"><i class="fab fa-twitter"></i> @vlemrc</a>
             <a href="#"><i class="fab fa-snapchat"></i> Vicoboss7</a>
-            <a href="https://www.instagram.com/vlemrc/"><i class="fab fa-instagram"></i> @vlemrc</a>
+            <a href="https://www.instagram.com/vlemrc/" target="_blank"><i class="fab fa-instagram"></i> @vlemrc</a>
         </div>
         <p>
           Copyright © 2020 M.LEMERCIER, Inc.
