--- a/focus.html
+++ b/focus.html
@@ -90,10 +90,10 @@
     </div>
   </section>
   <div class="cover">
-    <a class="espacedroite" href="https://twitter.com/arisroth">
+    <a class="espacedroite" href="https://twitter.com/arisroth" target="_blank">
       <i class="fab fa-twitter"></i>arisroth
     </a>
-    <a class="espacegauche" href="https://www.instagram.com/arisroth/">
+    <a class="espacegauche" href="https://www.instagram.com/arisroth/" target="_blank">
       <i class="fab fa-instagram"></i>arisroth
     </a>
   </div>
@@ -223,10 +223,10 @@
     </div>
   </section>
   <div class="cover">
-    <a class="espacedroite" href="https://www.inprnt.com/gallery/vangoathe/">
+    <a class="espacedroite" href="https://www.inprnt.com/gallery/vangoathe/" target="_blank">
       <i class="fas fa-shopping-cart"></i>SHOP
     </a>
-    <a class="espacegauche" href="https://www.instagram.com/vangoathe/">
+    <a class="espacegauche" href="https://www.instagram.com/vangoathe/" target="_blank">
       <i class="fab fa-instagram"></i>GOATHE©
     </a>
   </div>
@@ -296,10 +296,10 @@
     </div>
   </section>
   <div class="cover">
-    <a class="espacedroite" href="https://www.etsy.com/fr/shop/OsharenaShop?ref=search_shop_redirect">
+    <a class="espacedroite" href="https://www.etsy.com/fr/shop/OsharenaShop?ref=search_shop_redirect" target="_blank">
       <i class="fas fa-shopping-cart"></i>SHOP
     </a>
-    <a class="espacegauche" href="https://www.instagram.com/osharena_/">
+    <a class="espacegauche" href="https://www.instagram.com/osharena_/" target="_blank">
       <i class="fab fa-instagram"></i>Osharena_
     </a>
   </div>
@@ -365,10 +365,10 @@
     </div>
   </section>
   <div class="cover">
-    <a class="espacedroite" href="https://twitter.com/DYMdraw">
+    <a class="espacedroite" href="https://twitter.com/DYMdraw" target="_blank">
       <i class="fab fa-twitter"></i>DYMdraw
     </a>
-    <a class="espacegauche" href="https://www.instagram.com/DYMdraw/">
+    <a class="espacegauche" href="https://www.instagram.com/DYMdraw/" target="_blank">
       <i class="fab fa-instagram"></i>DYMdraw
     </a>
   </div>
@@ -433,10 +433,10 @@
     </div>
   </section>
   <div class="cover">
-    <a class="espacedroite" href="https://twitter.com/drawinoff">
+    <a class="espacedroite" href="https://twitter.com/drawinoff" target="_blank">
       <i class="fab fa-twitter"></i>Draw'¡n
     </a>
-    <a class="espacegauche" href="https://www.instagram.com/drawinoff/">
+    <a class="espacegauche" href="https://www.instagram.com/drawinoff/" target="_blank">
       <i class="fab fa-instagram"></i>Draw'¡n
     </a>
   </div>
@@ -510,10 +510,10 @@
     </div>
   </section>
   <div class="cover">
-    <a class="espacedroite" href="https://twitter.com/coverxanimes">
+    <a class="espacedroite" href="https://twitter.com/coverxanimes" target="_blank">
       <i class="fab fa-twitter"></i>coverxanimes
     </a>
-    <a class="espacegauche" href="https://www.instagram.com/coverxanimes/">
+    <a class="espacegauche" href="https://www.instagram.com/coverxanimes/" target="_blank">
       <i class="fab fa-instagram"></i>coverxanimes
     </a>
   </div>
@@ -523,7 +523,7 @@
         <div class="block-social">
           <div class="block-social-container">
             <i class="fab fa-twitter"></i>
-            <a href="https://twitter.com/vlemrc">@vlemrc</a>
+            <a href="https://twitter.com/vlemrc" target="_blank">@vlemrc</a>
           </div>
           <div class="block-social-container">
             <i class="fab fa-snapchat"></i>
@@ -531,7 +531,7 @@
           </div>
           <div class="block-social-container">
             <i class="fab fa-instagram"></i>
-            <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
+            <a href="https://www.instagram.com/vlemrc/" target="_blank">@vlemrc</a>
           </div>
         </div>
       <p>
