--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
       </div>
     </section>
     <div class="cover">
-      <a class="espacedroite" href="https://twitter.com/arisroth">
+      <a class="espacedroite" href="https://twitter.com/arisroth" target="_blank">
         <i class="fab fa-twitter"></i>arisroth
       </a>
-      <a class="espacegauche" href="https://www.instagram.com/arisroth/">
+      <a class="espacegauche" href="https://www.instagram.com/arisroth/" target="_blank">
         <i class="fab fa-instagram"></i>arisroth
       </a>
     </div>
@@ -186,7 +186,7 @@
             <div class="block-social">
               <div class="block-social-container">
                 <i class="fab fa-twitter"></i>
-                <a href="https://twitter.com/vlemrc">@vlemrc</a>
+                <a href="https://twitter.com/vlemrc" target="_blank">@vlemrc</a>
               </div>
               <div class="block-social-container">
                 <i class="fab fa-snapchat"></i>
@@ -194,7 +194,7 @@
               </div>
               <div class="block-social-container">
                 <i class="fab fa-instagram"></i>
-                <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
+                <a href="https://www.instagram.com/vlemrc/" target="_blank">@vlemrc</a>
               </div>
             </div>
           <p>
