--- a/phone.html
+++ b/phone.html
@@ -38,8 +38,8 @@
     <a href="POther.html">OTHER</a>
   </nav>
   <section class="phoneaccueil">
-    <img class="phone-img" src="./img/SNK/Livai2.JPG" alt="Livai2">
-    <a href="./SNKP.html" class="gotodbz">Voir Wallpaper SNK</a>
+    <img class="phone-img" src="./img/Zzz/naruto/ItachiUchihaMAssacre.JPG" alt="Itachi">
+    <a href="./PNaruto.html" class="gotodbz">Voir Wallpaper NARUTO</a>
     <h1>Choisissez un manga ci-dessus, et trouvez votre bonheur!</h1>
     <p>Une selection de plus de 200 fonds d'écrans pour téléphone n'attend que vous. Venez les découvrir.</p>
   </section>
@@ -49,7 +49,7 @@
         <div class="block-social">
           <div class="block-social-container">
             <i class="fab fa-twitter"></i>
-            <a href="https://twitter.com/vlemrc">@vlemrc</a>
+            <a href="https://twitter.com/vlemrc" target="_blank">@vlemrc</a>
           </div>
           <div class="block-social-container">
             <i class="fab fa-snapchat"></i>
@@ -57,7 +57,7 @@
           </div>
           <div class="block-social-container">
             <i class="fab fa-instagram"></i>
-            <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
+            <a href="https://www.instagram.com/vlemrc/" target="_blank">@vlemrc</a>
           </div>
         </div>
       <p>
