--- a/PHxH.html
+++ b/PHxH.html
@@ -338,7 +338,7 @@
         <div class="block-social">
           <div class="block-social-container">
             <i class="fab fa-twitter"></i>
-            <a href="https://twitter.com/vlemrc">@vlemrc</a>
+            <a href="https://twitter.com/vlemrc" target="_blank">@vlemrc</a>
           </div>
           <div class="block-social-container">
             <i class="fab fa-snapchat"></i>
@@ -346,7 +346,7 @@
           </div>
           <div class="block-social-container">
             <i class="fab fa-instagram"></i>
-            <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
+            <a href="https://www.instagram.com/vlemrc/" target="_blank">@vlemrc</a>
           </div>
         </div>
       <p>
